--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/Tuskan360/passport-photo-gravatar.git"
   },
   "dependencies": {
-    "gravatar":"1.0.x"
-  }
+    "gravatar": "1.0.x"
+  },
+  "author": "ForbesLindesay",
+  "license": "MIT"
 }
